k8s/infra/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  namespace: dev
spec:
  selector:
    db: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  namespace: dev
  labels:
    db: mongo-db
spec:
  selector:
    matchLabels:
      db: mongo-db
  template:
    metadata:
      labels:
        db: mongo-db
    spec:
      containers:
        - name: mongo-db
          image: mongo:4.4.29-focal
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
