k8s/infra/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: dev
spec:
  selector:
    db: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: dev
  labels:
    db: postgres-db
spec:
  selector:
    matchLabels:
      db: postgres-db
  template:
    metadata:
      labels:
        db: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:18.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
