k8s/infra/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: dev
  labels:
    db: rabbitmq
spec:
  selector:
    matchLabels:
      db: rabbitmq
  template:
    metadata:
      labels:
        db: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          ports:
            - containerPort: 5672
              name: amqp
              protocol: TCP
            - containerPort: 15672
              name: management
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 150Mi
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: dev
  labels:
    db: rabbitmq
spec:
  type: ClusterIP
  selector:
    db: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
