k8s/infra/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
spec:
  selector:
    db: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: dev
  labels:
    db: redis
spec:
  selector:
    matchLabels:
      db: redis
  template:
    metadata:
      labels:
        db: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
